--- a/src/app/components/assignment-item/assignment-item.component.html
+++ b/src/app/components/assignment-item/assignment-item.component.html
@@ -6,12 +6,12 @@
     </div>
     <div class="flex gap-3">
       <!-- <fa-icon [style.color]="'rgb(107 114 128)'" [icon]="faPen"></fa-icon> -->
-      <fa-icon
+      <!-- <fa-icon
         class="cursor-pointer"
         (click)="onDelete()"
         [style.color]="'rgb(107 114 128)'"
         [icon]="faTrash"
-      ></fa-icon>
+      ></fa-icon> -->
     </div>
   </div>
   <div class="flex pt-3 justify-start">
