--- a/src/app/components/add-assignment/add-assignment.component.html
+++ b/src/app/components/add-assignment/add-assignment.component.html
@@ -1,25 +1,21 @@
-<section class="bg-[#f5f5f7]">
+<section>
   <div class="py-4 md:py-10">
-    <h1
-      class="w-72 sm:w-[55%] text-center m-auto text-lg md:text-2xl font-medium"
-    >
-      Add Assignment
-    </h1>
+    <h1 class="text-center text-lg md:text-2xl font-medium">Add Assignment</h1>
     <form
       #form="ngForm"
       (ngSubmit)="onSubmit(form)"
-      class="w-72 sm:w-[55%] m-auto bg-white rounded-md shadow-md"
+      class="mt-3 mx-5 md:m-auto md:w-4/5"
     >
       <div *ngIf="submitted" class="flex flex-col p-3 pt-6">
         <p class="bg-green-200 rounded-md font-medium p-3 text-sm md:text-lg">
           Assignment added
         </p>
       </div>
-      <div class="flex flex-col m-3 md:m-4 md:pt-1">
+      <div class="flex flex-col m-3 md:m-4">
         <label class="font-medium" for="name">Name</label>
         <input
           required
-          class="bg-slate-200 p-2 rounded-md"
+          class="m-0 rounded border border-solid border-neutral-500 bg-transparent bg-clip-padding px-3 py-[0.3rem] text-base font-normal leading-[1.6] text-neutral-700 outline-none transition duration-200 ease-in-out focus:z-[3] focus:border-primary focus:text-neutral-700 focus:shadow-[inset_0_0_0_1px_rgb(59,113,202)] focus:outline-none"
           [(ngModel)]="assignment.name"
           type="text"
           name="name"
@@ -28,7 +24,7 @@
       <div class="flex flex-col m-3 md:m-4">
         <label class="font-medium" for="name">Subject</label>
         <input
-          class="bg-slate-200 p-2 rounded-md"
+          class="m-0 rounded border border-solid border-neutral-500 bg-transparent bg-clip-padding px-3 py-[0.3rem] text-base font-normal leading-[1.6] text-neutral-700 outline-none transition duration-200 ease-in-out focus:z-[3] focus:border-primary focus:text-neutral-700 focus:shadow-[inset_0_0_0_1px_rgb(59,113,202)] focus:outline-none"
           [(ngModel)]="assignment.subject"
           type="text"
           name="subject"
@@ -38,8 +34,9 @@
       <div class="flex flex-col m-3 md:m-4">
         <label class="font-medium" for="name">Start Date</label>
         <input
-          class="bg-slate-200 p-2 rounded-md"
+          class="m-0 rounded border border-solid border-neutral-500 bg-transparent bg-clip-padding px-3 py-[0.3rem] text-base font-normal leading-[1.6] text-neutral-700 outline-none transition duration-200 ease-in-out focus:z-[3] focus:border-primary focus:text-neutral-700 focus:shadow-[inset_0_0_0_1px_rgb(59,113,202)] focus:outline-none"
           [(ngModel)]="assignment.startDate"
+          value="2023-05-08"
           type="date"
           name="startDate"
           required
@@ -48,23 +45,23 @@
       <div class="flex flex-col m-3 md:m-4">
         <label class="font-medium" for="name">End Date</label>
         <input
-          class="bg-slate-200 p-2 rounded-md"
+          class="m-0 rounded border border-solid border-neutral-500 bg-transparent bg-clip-padding px-3 py-[0.3rem] text-base font-normal leading-[1.6] text-neutral-700 outline-none transition duration-200 ease-in-out focus:z-[3] focus:border-primary focus:text-neutral-700 focus:shadow-[inset_0_0_0_1px_rgb(59,113,202)] focus:outline-none"
           [(ngModel)]="assignment.endDate"
           type="date"
           name="endDate"
           required
         />
       </div>
-      <div class="flex justify-around pb-3 md:pb-5">
+      <div class="flex justify-evenly sm:mt-6 pb-3">
         <button
           [disabled]="form.invalid"
-          class="bg-black disabled:cursor-not-allowed cursor-pointer hover:bg-gray-700 px-4 py-1 rounded-md text-white font-medium md:w-1/3"
+          class="bg-black disabled:cursor-not-allowed cursor-pointer hover:bg-gray-700 w-32 px-4 py-1 rounded-md text-white font-medium md:py-2 sm:w-40 md:w-56"
           type="submit"
         >
           Submit
         </button>
         <button
-          class="bg-black hover:bg-gray-700 px-4 py-1 rounded-md text-white font-medium md:w-1/3"
+          class="bg-black hover:bg-gray-700 w-32 px-4 py-1 rounded-md text-white font-medium md:py-2 sm:w-40 md:w-56"
           (click)="backToHome()"
         >
           Cancel
